--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
 <title>Login Participants 1b</title>
 </head>
 <body>
+	<form action="logearse" method="post">
 	<table border="0">
         <tr>
              <td colspan="2" align="center">Login Participants</td>
