--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,26 +1,28 @@
+<!DOCTYPE HTML>
 <html>
 <head>
 <title>Login Participants 1b</title>
 </head>
 <body>
 	<form action="logearse" method="post">
-	<table border="0">
+	<table>
         <tr>
              <td colspan="2" align="center">Login Participants</td>
         </tr>
         <tr>
             <td>Nombre de usuario:</td>
-            <td><input type="text" name="usuario"></td>
+            <td><input type="text" name="usuario"/></td>
         </tr>
         <tr>
-            <td>Contraseña</td>
-            <td><input type="password" name="password"></td>
+            <td>Password:</td>
+            <td><input type="password" name="password"/></td>
         </tr>
         <tr>
             <td colspan="2" align="right">
-                <input type="submit" value="Comprobar">
+                <input type="submit" value="Comprobar"/>
             </td>
         </tr>
     </table>
+    </form>
 </body>
 </html>
