--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,8 +4,8 @@
 <title>Error</title>
 </head>
 <body>
-	<p> Se ha producido un error al introducir los datos<br>
-	 Porfavor compruebe que ha introducido correctamente los datos
+	<p> Se ha producido un error al introducir los datos<br/>
+	 Por favor compruebe que ha introducido correctamente los datos
 		o que se ha registrado correctamente en el sistema </p>
 	<a id ="logearse" href="/"> Reintentar </a>
 </body>
