--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <title>Login Participants 1b</title>
 </head>
 <body>
-	<form action="logearse" method="post">
+	<form action="user" method="post">
 	<table>
         <tr>
              <td colspan="2" align="center">Login Participants</td>
