--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,6 +4,7 @@
 <title>Error</title>
 </head>
 <body>
+	<h1> Error 404 </h1>
 	<p> Se ha producido un error al introducir los datos<br/>
 	 Por favor compruebe que ha introducido correctamente los datos
 		o que se ha registrado correctamente en el sistema </p>
