--- a/src/main/resources/templates/changeInfo.html
+++ b/src/main/resources/templates/changeInfo.html
@@ -4,19 +4,23 @@
 <title>Login Participants 1b</title>
 </head>
 <body>
-	<form action="user" method="post">
+	<form action="changePassword" method="post">
 	
 	<table>
         <tr>
              <td colspan="2" align="center">Login Participants</td>
         </tr>
         <tr>
-            <td>Nombre de usuario:</td>
-            <td><input type="text" name="email"/></td>
+            <td>Contraseña actual:</td>
+            <td><input type="text" name="password"/></td>
         </tr>
         <tr>
-            <td>Password:</td>
-            <td><input type="password" name="password"/></td>
+            <td>Nueva contraseña:</td>
+            <td><input type="password" name="newPassword"/></td>
+        </tr>
+        <tr>
+            <td>Repite contraseña:</td>
+            <td><input type="password" name="newPasswordAgain"/></td>
         </tr>
         <tr>
             <td colspan="2" align="right">
