arreglo fallo edad

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -7,7 +7,7 @@
 	<h1> Esta usted dado de alta<br/> Estos son sus datos </h1>
     <p th:text="'Apellido: ' + ${apellido} " />
     <p th:text="'Nombre: ' + ${nombre} " />
-    <p th:text="'Edad: ' + ${fechaNaciemento} " />
+    <p th:text="'Edad: ' + ${edad} " />
     <p th:text="'DNIl: ' + ${dni} " />
     <p th:text="'Email: ' + ${email} " />
     <a id ="logearse" href="/"> Atras </a>
