--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,9 +5,8 @@
 </head>
 <body>
 	<h1> Error 404 </h1>
-	<p> Se ha producido un error al introducir los datos<br/>
-	 Por favor compruebe que ha introducido correctamente los datos
-		o que se ha registrado correctamente en el sistema </p>
+	<p> Se ha producido un error al introducir los datos</p>
+	 <p th:text="${error} " />
 	<a id ="logearse" href="/"> Reintentar </a>
 </body>
 </html>
