--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> Datos ciudadano </title>
+<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
 	<h1> Esta usted dado de alta<br/> Estos son sus datos </h1>
